# SceneSDK

./: .gitignore  .sdk_codegen.sha256  README.md  openapi.json  pyproject.toml
cpp/: CMakeLists.txt  README.md
cpp/include/sfmapi/: client.hpp  json.hpp  sfmapi.hpp  specs.hpp  sse.hpp
cpp/test/: test_binary.cpp  test_client.cpp  test_contract.cpp  test_extras.cpp
cpp/test/contract/fixtures/: capabilities.json  dataset_create.json  error_404_dataset_missing.json  error_404_project_missing.json  error_422_validation.json  job_accepted_features.json  job_accepted_merge.json  page_empty.json  project_get.json  project_list.json  spec.json  (+3 more)
python/: README.md  pyproject.toml
python/sceneapi_client_gen/: LICENSE  README.md  __init__.py  _ergonomics.py  pyproject.toml
python/sceneapi_client_gen/models/: artifact_conversion_out.py  artifact_ref.py  artifact_validation_issue_out.py  backend_action_out_links_type_0.py  backend_action_run_request.py  backend_action_validation_error_out.py  bulk_set_pose_priors_v1_datasets_dataset_id_pose_priors_put_body.py  bundle_adjustment_spec_loss_kernel.py  bundle_adjustment_spec_mode.py  capabilities_out.py  capabilities_out_features.py  compatibility.py  conformance_status.py  container_service_healthcheck.py  container_service_runtime.py  dataset_create_intrinsics_mode.py  dataset_out.py  doctor_check.py  export_spec.py  features_spec.py  georegister_request_backend_options.py  global_spec_backend_options.py  gps_coord.py  image_out_links_type_0.py  incremental_spec.py  incremental_spec_backend_options.py  incremental_spec_input_artifacts.py  job_detail.py  job_out.py  job_progress_out_task_counts.py  local_source_spec.py  matcher_spec_input_artifacts.py  merge_request.py  merge_request_sim_3_aligners_type_0_item.py  one_shot_localize_response_spec.py  page_backend_action_out.py  page_image_out.py  page_plugin_entry_point_out.py  page_radiance_evaluation_out.py  page_stage_artifact_out.py  (+54 more)
python/scenesdk/: README.md  _ergonomics.py  pyproject.toml
python/scenesdk/models/: artifact_conversion_step_out.py  artifact_convert_request_options.py  artifact_format_out_examples_item.py  backend_action_out.py  backend_action_out_side_effects.py  backend_action_run_request_inputs.py  backend_artifact_contract_out.py  backend_config_schema_out_links_type_0.py  backend_config_schema_out_metadata.py  backend_info_out.py  backend_out_runtime_versions.py  backend_version.py  backend_version_runtime_versions.py  bundle_adjustment_spec.py  bundle_adjustment_spec_backend_options.py  camera_model_out.py  compatibility_tool_versions.py  container_service_cache.py  container_service_execution_log_collection.py  container_service_object_store.py  dataset_create_rig_config_type_0.py  dataset_out_rig_config_json_type_0.py  dataset_patch_intrinsics_mode_type_0.py  doctor_check_status.py  equirectangular_projection_request.py  export_spec_format.py  features_spec_backend_options.py  features_spec_input_artifacts.py  features_spec_type.py  georegister_request.py  global_spec.py  global_spec_backend.py  global_spec_input_artifacts.py  hierarchical_spec_input_artifacts.py  image_create.py  image_exif_response.py  image_observation_row.py  image_pair_ref.py  job_out_links_type_0.py  job_out_status.py  (+64 more)
python/sfmapi_client/: __init__.py  _transport.py  binary.py  client_async.py  client_sync.py  errors.py  models.py
python/sfmapi_client/cli/: __init__.py  _render.py  main.py
python/sfmapi_client_gen/: README.md  __init__.py  _ergonomics.py  errors.py  pyproject.toml
python/sfmapi_client_gen/models/: __init__.py  api_key_out.py  archive_import_request.py  artifact_conversion_plan_out.py  artifact_conversion_plan_request.py  artifact_conversion_step_out.py  artifact_convert_request.py  artifact_file_ref.py  artifact_format_out.py  artifact_format_out_json_schema_type_0.py  artifact_import_request.py  artifact_import_request_metadata.py  artifact_import_request_producer_type_0.py  artifact_import_request_summary_type_0.py  artifact_kind_out.py  artifact_validation_out.py  backend_action_out_input_schema_type_0.py  backend_action_out_metadata.py  backend_action_out_output_schema_type_0.py  backend_action_out_stability.py  backend_action_run_request.py  backend_action_validate_request.py  backend_action_validate_request_inputs.py  backend_action_validate_response.py  backend_action_validate_response_normalized_inputs.py  backend_artifact_contract_out_links_type_0.py  backend_artifact_contract_out_metadata.py  backend_config_schema_out.py  backend_config_schema_out_defaults.py  backend_config_schema_out_option_schema_type_0.py  backend_out.py  backend_out_links_type_0.py  batch_create_images_request.py  batch_create_images_response.py  camera_model_out_distortion.py  camera_model_out_projection.py  chain_error_out.py  compatibility.py  conformance.py  container_service_build.py  (+189 more)
python/tests/: test_client.py  test_ergonomics_paginate.py  test_ergonomics_typed_job.py
python/tests/cli/: test_cli.py
(+253 files in other folders)
